--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Online Clothing</title>
+</head>
+<body>
+
+    <header>
+        <h1>Online Clothing</h1>
+    </header>
+
+    <div class="logo">LOGO
+        <div class="banner">BANNER</div>
+
+    </div>
+
+    <nav>
+        <p>Home | Shop | About | Contact</p>
+    </nav>
+
+    <section>
+        <h2>TEXT</h2>
+    </section>
+
+    <section>
+        <h2>Products</h2>
+        <p>Sweaters</p>
+        <p>Jackets</p>
+        <p>Boots</p>
+    </section>
+
+    <section>
+        <h2>Men's Collection</h2>
+        <p>Sweaters - €35</p>
+        <p>Jackets - €68</p>
+        <p>Boots - €45</p>
+    </section>
+
+    <section>
+        <h2>Women's Collection</h2>
+        <p>Sweaters - €45</p>
+        <p>Jackets - €75</p>
+        <p>Boots - €50</p>
+    </section>
+
+    <section>
+        <h2>Kid's Collection</h2>
+        <p>Sweaters - €30</p>
+        <p>Jackets - €40</p>
+        <p>Boots - €35</p>
+    </section>
+
+    <footer>
+        <p>© Online Clothing</p>
+    </footer>
+
+</body>
+</html>
