--- a/ProductPage.html
+++ b/ProductPage.html
@@ -1,7 +1,41 @@
+<!DOCTYPE html>
 <html>
+    <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>product</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
     <body>
-    <imgs src="ProductSketch.png">
+    <nav class="navbar navbar-expand-sm justify-content-center bg-light">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button> 
+        <a class="navbar-brand" href="#">Frost&Form</a>  
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-items">
+                <a class="nav-link" href="#">Men</a>
+            </li>
+            <li class="nav-items">
+                <a class="nav-link" href="#">Women</a>
+            </li>
+            <li class="nav-items">
+                <a class="nav-link" href="#">Kids</a>
+            </li>
+            <button class=""></button>
+        </ul>
+        <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search">
+        <button class="btn btn-primary" type="button">Search</button>
+      </form>
+    </div>
+    </nav>
+        <div class="row">
+    <div class="col-6"><img class="img-fluid" src="ExampleImg.png"></div>
+    <div class="col-6">
     <h1>Product name</h1>
     <p>description</p>
     <h3>price</h3>
@@ -9,5 +43,6 @@
     <input type="submit" name="" value="3">
     <input type="submit" name="" value="4">
     <br>
-    <input type="submit" name="" value="Add to cart">
+    <input type="submit" name="" value="Add to cart"></div>
+</div>
 </body>
