--- a/ProductPage.html
+++ b/ProductPage.html
@@ -6,37 +6,60 @@
     <title>product</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    .footer {
+            background-color: rgb(44, 62, 80); 
+            color: rgb(255, 255, 255);
+            text-align: center;
+            padding: 30px 20px;
+            margin-top: 40px;
+        }
+    </style>
     </head>
     <body>
-    <div class="container p-1">
-    <nav class="navbar navbar-expand-sm justify-content-center bg-light">
+    <nav class="navbar navbar-expand-lg px-4 justify-content-center bg-light fixed-top">
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button> 
-        <a class="navbar-brand" href="#">Frost&Form</a>  
+        <ul class="navbar-nav ms-auto">
+        <a class="navbar-brand" href="#">Frost&Form</a>
+    </ul>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-            <li class="nav-items">
-                <a class="nav-link" href="#">Men</a>
-            </li>
-            <li class="nav-items">
-                <a class="nav-link" href="#">Women</a>
-            </li>
-            <li class="nav-items">
-                <a class="nav-link" href="#">Kids</a>
-            </li>
+            <li class="nav-item dropdown">
+          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">Men</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Jackets</a></li>
+            <li><a class="dropdown-item" href="#">Sweaters</a></li>
+            <li><a class="dropdown-item" href="#">Boots</a></li>
+            </ul>
+            <li class="nav-item dropdown">
+          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">Women</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Jackets</a></li>
+            <li><a class="dropdown-item" href="#">Sweaters</a></li>
+            <li><a class="dropdown-item" href="#">Boots</a></li>
+            </ul>
+            <li class="nav-item dropdown">
+          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">Kids</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Jackets</a></li>
+            <li><a class="dropdown-item" href="#">Sweaters</a></li>
+            <li><a class="dropdown-item" href="#">Boots</a></li>
+            </ul>
         </ul>
-        
+        <ul class="navbar-nav ms-auto">
   <form class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Search">
-        <button class="btn btn-primary" type="button">Search</button>
+        <input class="form-control me-1 my-2 mb-2" type="text" placeholder="Search">
+        <button class="btn btn-primary btn-sm me-2 my-2 mb-2" type="button">Search</button>
       </form>
-      <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+      <button class="btn btn-dark my-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
     Cart
   </button>
     </div>
     </nav>
+</ul>
     <div class="offcanvas offcanvas-end" id="demo">
   <div class="offcanvas-header">
     <h1 class="offcanvas-title">Cart</h1>
@@ -47,7 +70,7 @@
   </div>
       
 </div>
-
+    <div class="container" style="margin-top:65px">
         <div class="row">
     <div class="col-6"><img class="img-fluid" src="ExampleImg.png"></div>
     <div class="col-6">
@@ -55,14 +78,22 @@
     <p>description</p>
     <h3>price</h3>
     <p>size options</p>
-    <button type="button" class="btn btn-outline-dark btn-sm">S</button>
-    <button type="button" class="btn btn-outline-dark btn-sm">M</button>
-    <button type="button" class="btn btn-outline-dark btn-sm">L</button>
-    <br>
+    <div class="d-flex">
+    <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 flex-fill">XS</button>
+    <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 px-3 flex-fill">S</button>
+    <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 px-3 flex-fill">M</button>
+    <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 px-3 flex-fill">L</button>
+    <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 px-3 flex-fill">XL</button>
+  </div>
     <div class="d-grid">
   <button type="button" class="btn btn-dark btn-block">Add to cart</button>
-</div>
-</div>
-</div>
-</div>
+</div></div></div></div>
+<footer class="footer">
+        <div class="container">
+            <p>Where Snowflakes Meet Blueprints.</p>
+            <p style="margin-top: 10px;"> Frost & Form - Finnish winter wear brand since 2025</p>
+        </div>
+    </footer>
+
+</div></div>
 </body>
