Finished static website

--- a/ProductPage1.html
+++ b/ProductPage1.html
@@ -130,11 +130,11 @@
 </div>
     <div class="container" style="margin-top:65px">
         <div class="row">
-    <div class="col-6"><img class="img-fluid" src="image1.jpg.jpeg"></div>
+    <div class="col-6"><img class="img-fluid" src="image2.jpg.jpeg"></div>
     <div class="col-6">
-    <h1>Winter Whisper Knit</h1>
-    <p>A soft, lightweight knit designed for everyday comfort, perfect for layering through every season.</p>
-    <h3>15,00 €</h3>
+    <h1>Soft Ember Pullover</h1>
+    <p>A cozy cable‑knit sweater with a relaxed silhouette that adds effortless warmth and style.</p>
+    <h3>17,00 €</h3>
     <p>size options</p>
     <div class="d-flex">
     <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 flex-fill">XS</button>
