--- a/ProductPage2.html
+++ b/ProductPage2.html
@@ -130,11 +130,11 @@
 </div>
     <div class="container" style="margin-top:65px">
         <div class="row">
-    <div class="col-6"><img class="img-fluid" src="image1.jpg.jpeg"></div>
+    <div class="col-6"><img class="img-fluid" src="image3.jpg.jpeg"></div>
     <div class="col-6">
-    <h1>Winter Whisper Knit</h1>
-    <p>A soft, lightweight knit designed for everyday comfort, perfect for layering through every season.</p>
-    <h3>15,00 €</h3>
+    <h1>Moonlit Meadow Sweater</h1>
+    <p>A modern oversized sweater with a smooth, cloud‑soft feel and a timeless minimalist look.</p>
+    <h3>19,00 €</h3>
     <p>size options</p>
     <div class="d-flex">
     <button type="button" class="btn btn-outline-dark btn-sm my-3 me-1 flex-fill">XS</button>
