--- a/index.html
+++ b/index.html
@@ -277,10 +277,12 @@
         <!-- First Row -->
         <div class="product-grid">
             <div class="product-card">
+                <a href="CollectionsPage.html">
                 <div class="product-image">
                     <img src="wimage1.jpg.jpeg" alt="Sweater Women's">
                 </div>
                 <div class="product-title">Sweater Women's</div>
+            </a>
             </div>
             
             <div class="product-card">
