--- a/CollectionsPage.html
+++ b/CollectionsPage.html
@@ -65,7 +65,7 @@
             color: rgb(51, 51, 51);
             padding: 12px 16px;
             text-decoration: none;
-            display: green;
+            display: white;
             border-bottom: 1px solid rgb(241, 241, 241);
             transition: background 0.3s;
         }
