--- a/CollectionsPage.html
+++ b/CollectionsPage.html
@@ -35,7 +35,7 @@
             text-decoration: none;
         }
          .nav-link {
-            background-color: rgb(52, 73, 94);
+            background-color: rgb(255,255,255);
             color: rgb(255, 255, 255);
             padding: 12px 20px;
             border: none;
