--- a/ProductPage2.html
+++ b/ProductPage2.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-      .navbar {
+        .navbar {
             background: rgb(44, 62, 80); 
             padding: 15px 30px;
             display: flex;
@@ -28,6 +28,13 @@
             font-weight: bold;
             text-decoration: none;
         }
+        .navbar-brand:hover {
+            color: rgb(255, 255, 255);
+            font-size: 24px;
+            font-weight: bold;
+            text-decoration: none;
+        }
+        
          .nav-link {
             background-color: rgb(52, 73, 94);
             color: rgb(255, 255, 255);
@@ -39,12 +46,13 @@
         }
         .nav-link:hover {
             background-color: rgb(61, 86, 110); 
+            color: rgb(255, 255, 255);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             border-radius: 4px;
             overflow: hidden;
         }
 
-        .dropdown-item a {
+        .dropdown-item {
             color: rgb(51, 51, 51);
             padding: 12px 16px;
             text-decoration: none;
@@ -52,8 +60,22 @@
             transition: background 0.3s;
         }
         
-        .drogpdown-item a:hover {
+        .dropdown-item:hover {
             background-color: rgb(248, 249, 250); 
+        }
+        .btn {
+            background-color: rgb(52, 73, 94);
+            color: rgb(255, 255, 255);
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            transition: background 0.3s;
+        }
+        .btn:hover {
+            background-color: rgb(61, 86, 110); 
+            color: rgb(255, 255, 255);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
         }
          body {
             background-color:rgb(255,255,255);
